methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:1: error: not found: value Def
Def dogHouse(){
^MethodsDogHouse:1: error: Unit does not take parameters
Def dogHouse(){
              ^MethodsDogHouse:8: error: not found: value dogHouse
dogHouse() 
^MethodsDogHouse:14: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:20: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^